--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <artifactId>cprimporter</artifactId>
     <packaging>war</packaging>
-    <version>4.1-SNAPSHOT</version>
+    <version>4.1</version>
 
    <distributionManagement>
         <repository>
@@ -39,7 +39,8 @@
         <url>scm:git:git@github.com:trifork/sdm4-cprimporter</url>
         <connection>scm:git:git@github.com:trifork/sdm4-cprimporter.git</connection>
         <developerConnection>scm:git:git@github.com:trifork/sdm4-cprimporter.git</developerConnection>
-    </scm>
+      <tag>cprimporter-4.1</tag>
+  </scm>
 
     <issueManagement>
         <system>JIRA</system>
